--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
     <head>
-        <title>Sheba's Amazing Website</title>
+        <title>GOOGLE TWO</title>
         <style>
             body {
                 background: rgb(125, 198, 205);
