--- a/portfolio.html
+++ b/portfolio.html
@@ -94,7 +94,7 @@
         <main>
             <div class="content">
                 <h1>Portfolio</h1>
-                <ul id-"portfolio">
+                <ul id="portfolio">
                 </ul>
             </div>
         </main>
